@@ -2223,6 +2223,17 @@
       </component>
     </version>
   </module>
+  <module name="vte">
+    <version release="gnome-2.0-extras">
+      <component name="vte" dir="vte">
+	<podir dir="po"/>
+	<potname name="vte.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="walk500">
     <version release="gnome-1.4-extras">
       <component name="walk500" dir="walk500">
