@@ -1,3 +1,7 @@
+2002-07-17  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added vte.
+
 2002-07-16  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Fixed the pot file name for gnomemeeting.
